tests/errors/types/namespace-no-such-member-non-generic.fn
---
Description: Type access on a namespace where the type name does not exist
Expected: FN3203
---

namespace Math
{
    type Vector2
    {
        x: f32
        y: f32
        init{}
    }
}

type Program
{
    static fn Main -> i32
    {
        var a: Math.NotAType = 5
        return 0
    }
}
